# kubevirt

./: WORKSPACE  go.mod  go.sum
cmd/virt-handler/: virt-handler.go
pkg/virt-api/webhooks/: BUILD.bazel  hyperv.go
pkg/virt-api/webhooks/mutating-webhook/mutators/: BUILD.bazel  vmi-mutator_test.go
pkg/virt-api/webhooks/validating-webhook/admitters/: BUILD.bazel  vmi-create-admitter_test.go
pkg/virt-handler/: vm.go
pkg/virt-handler/node-capabilities/: BUILD.bazel  kvm-caps-info-plugin_amd64.go  node_capabilities.go  node_capabilities_test.go
pkg/virt-handler/node-capabilities/util/: BUILD.bazel
pkg/virt-handler/node-labeller/: BUILD.bazel  capabilities_manager.go  cpu_plugin.go  node_labeller.go  node_labeller_test.go
tests/: BUILD.bazel  hyperv_test.go
tests/infrastructure/: BUILD.bazel  node-labeller.go
