load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["node_capabilities.go"],
    importpath = "kubevirt.io/kubevirt/pkg/virt-handler/node-capabilities",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/virt-config:go_default_library",
        "//staging/src/kubevirt.io/client-go/log:go_default_library",
        "//vendor/libvirt.org/go/libvirtxml:go_default_library",
    ],
)
